# Interface-2

./: .gitignore  README.md  README.md.sig  index.html  package-lock.json  package.json  reporte_limpieza_y_refactor.txt  tsconfig.app.json  vite.config.ts
scripts/: build-secure.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/app/: auth_service.rs  catalog_service.rs  instance_service.rs  java_service.rs  launcher_service.rs  mod.rs  redirect_launch.rs  settings_service.rs  shortcut_instance.rs  version_service.rs
src-tauri/src/commands/: catalog.rs  exports.rs  file_manager.rs  import.rs  mod.rs  mods.rs  settings.rs  skin_processor.rs  validator.rs  visual_meta.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/auth/: microsoft.rs  mod.rs  profile.rs  tokens.rs  xbox.rs
src-tauri/src/domain/instance/: creator.rs  instance.rs  metadata.rs  mod.rs  structure.rs  validator.rs
src-tauri/src/domain/java/: embedded.rs  java_detector.rs  java_requirement.rs  java_validator.rs  java_version.rs  mod.rs
src-tauri/src/domain/loaders/fabric/: installer.rs
src-tauri/src/domain/loaders/forge/: installer.rs  mod.rs  resolver.rs
src-tauri/src/domain/loaders/neoforge/: installer.rs
src-tauri/src/domain/loaders/quilt/: installer.rs  metadata.rs
src-tauri/src/domain/minecraft/: argument_resolver.rs  asset.rs  library.rs  manifest.rs  mod.rs  rule_engine.rs  version_json.rs
src-tauri/src/domain/models/: instance.rs  java.rs  loader.rs  mod.rs  user.rs  version.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/cache/: cache_manager.rs
src-tauri/src/infrastructure/checksum/: sha1.rs
src-tauri/src/infrastructure/downloader/: client.rs  integrity.rs  mod.rs  queue.rs  retry.rs
src-tauri/src/infrastructure/filesystem/: config.rs  directories.rs  file_ops.rs  lock.rs  mod.rs  paths.rs
src-tauri/src/infrastructure/http/: client.rs  downloader.rs
src-tauri/src/infrastructure/storage/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/runtime/: command_builder.rs  env.rs  memory.rs  mod.rs  process.rs
src-tauri/src/services/: discord_presence.rs  game_launcher.rs  instance_builder.rs  java_installer.rs  loader_installer.rs  minecraft_downloader.rs  mod.rs
src-tauri/src/shared/: constants.rs  errors.rs  json.rs  logger.rs  mod.rs
(+39 files in other folders)
