[package]
name = "app"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
uuid = { version = "1.20.0", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
futures-util = "0.3"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
flate2 = "1.0"
tar = "0.4"
fs2 = "0.4"
base64 = "0.22"
serde_urlencoded = "0.7"
urlencoding = "2.1"
webbrowser = "1.0"
rfd = "0.15"
regex = "1"

image = { version = "0.25", default-features = false, features = ["png"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
discord-rich-presence = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
